--- a/TP2_Capitales/app/src/main/res/layout/activity_main.xml
+++ b/TP2_Capitales/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,29 @@
     android:layout_height="match_parent"
     android:padding="24dp">
 
+    <ImageView
+        android:id="@+id/logoApp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginBottom="30dp"
+        android:contentDescription="Logo de la app"
+        android:src="@drawable/logo_app"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnCargar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+
     <Button
         android:id="@+id/btnCargar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="1. Cargar ciudad capital"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Cargar ciudad capital"
+        app:layout_constraintTop_toBottomOf="@+id/logoApp"
+        app:layout_constraintBottom_toTopOf="@+id/btnConsultar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -19,9 +36,12 @@
         android:id="@+id/btnConsultar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="2. Consultar ciudad por nombre"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/btnCargar"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Consultar ciudad por nombre"
+        app:layout_constraintTop_toBottomOf="@+id/btnCargar"
+        app:layout_constraintBottom_toTopOf="@+id/btnBorrarCiudad"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -29,9 +49,12 @@
         android:id="@+id/btnBorrarCiudad"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="3. Borrar ciudad por nombre"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/btnConsultar"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Borrar ciudad por nombre"
+        app:layout_constraintTop_toBottomOf="@+id/btnConsultar"
+        app:layout_constraintBottom_toTopOf="@+id/btnBorrarPais"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -39,9 +62,12 @@
         android:id="@+id/btnBorrarPais"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="4. Borrar ciudades de un país"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/btnBorrarCiudad"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Borrar ciudades de un país"
+        app:layout_constraintTop_toBottomOf="@+id/btnBorrarCiudad"
+        app:layout_constraintBottom_toTopOf="@+id/btnModificarPoblacion"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -49,8 +75,11 @@
         android:id="@+id/btnModificarPoblacion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="5. Modificar población de una ciudad"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Modificar población de una ciudad"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnBorrarPais"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
