--- a/TP2_Random/app/src/main/res/layout/activity_main.xml
+++ b/TP2_Random/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F2F2F7"
     android:padding="24dp">
+
+    <ImageView
+        android:id="@+id/imgAzar"
+        android:layout_width="175dp"
+        android:layout_height="136dp"
+        android:contentDescription="Título del juego"
+        android:scaleType="fitCenter"
+        android:src="@drawable/azar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnVerReglas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="64dp"
+        android:background="@android:color/transparent"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        android:padding="0dp"
+        android:text="Ver Reglas"
+        android:textColor="#808080"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toTopOf="@+id/tvMensaje"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/tvMensaje"
