--- a/TP2_Random/app/src/main/res/layout/activity_rules.xml
+++ b/TP2_Random/app/src/main/res/layout/activity_rules.xml
@@ -1,6 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
              android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="181dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="32dp"
+        android:text="REGLAS"
+        android:textSize="24sp"
+        android:textColor="@color/colorPrimary"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/regla1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/tvRegla1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Regla 1"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:paddingBottom="4dp" />
+
+        <TextView
+            android:id="@+id/tvContenidoRegla1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Se genera un número aleatorio entre 1 y 5."
+            android:textSize="16sp"
+            android:textColor="#000000"
+            android:visibility="gone" />
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
